tests/NormalTests/paczka1/small_fuzzy/16779918.err
Error in line 13: 144Je A537 22,8
Error in line 14: 144Je S353 76,7
